Configurable max heap size and PID fix
Change-Id: I6e4ae9fd1c3e64e0d470c044ade0387045123f60
Signed-off-by: abatos <adrian.batos-parac@amdocs.com>